--- a/views/views.xml
+++ b/views/views.xml
@@ -15,7 +15,7 @@
       </field>
     </record>
 
-    <!-- <record model="ir.ui.view" id="view_account_asset_category_form">
+    <record model="ir.ui.view" id="view_account_asset_category_form">
       <field name="name">view_account_asset_category_form</field>
       <field name="model">account.asset.category</field>
       <field name="inherit_id" ref="om_account_asset.view_account_asset_category_form" />
@@ -39,7 +39,7 @@
           <field name="method_new" string="Number of Months In Period (compare)" />
         </field>
       </field>
-    </record> -->
+    </record>
 
 
   </data>
